        - use a (hopefully) more stable cancel implementation
          that immediately frees the coroutine data.
        - cede/cede_notself return a status now.
        - added Coro::guard function.
        - added a global coroutine pool for jobs (on my machine,
          I can create and execute 48k simple coros/s with async,
          and 128k coros with async_pool).

3.2  Fri Dec 22 05:07:09 CET 2006
	- improve portability to slightly older perls.
        - use cleaner coroutine destruction.
        - simplify configuration for users.
        - optionally (unrecommended) prefer perl functions over
          their coro replacements.

3.11 Tue Dec  5 13:11:24 CET 2006
        - fixed some bogus assert's, but as perl.h disables assert even
          without NDEBUG (thank you very much), not too many people should
          notice (that did include myself). Andreas König noticed, though :)
	- do not save/restore PL_sortcxix on >= 5.9.x, it doesn't seem to have
          it. Also noticed by Andreas König :)
        - save/restore tainted status.
        - verified to pass the testsuite on my 5.9.5.

3.1  Mon Dec  4 23:03:40 CET 2006
        - INCOMPATIBLE CHANGE: $/ is now per-coroutine (but slow).
        - incompatible change: transfer flags are now per-state.
	- give a better error message on deadlock.
        - document Coro::nready.
        - enhanced testsuite.

3.01 Sun Dec  3 23:47:42 CET 2006
	- forgot to include Coro::Timer.

3.0  Sun Dec  3 22:57:25 CET 2006
	- the "FINALLY COMPLETELY STABLE" release (coming soon:
          the "FAMOUS LAST WORDS" release).
	- implement a new stack sharing algorithm, which uses a stack
          pool (size currently hardcoded).
        - make stack sharing mandatory (it no longer uses a heuristic).
        - eval/die no longer cause weird problems under heavy use.
        - Coro::Event could cause livelocks if it was used but
          no Coro::Event watchers were used.