@@ -19,6 +19,7 @@ TODO: destroy gets only called on cancel: fix(?)
         - added a global coroutine pool for jobs (on my machine,
           I can create and execute 48k simple coros/s with async,
           and 128k coros with async_pool).
+        - Coro::AIO now uses the coroutine priority as io priority.
 
 3.2  Fri Dec 22 05:07:09 CET 2006
 	- improve portability to slightly older perls.
